test/errors/offsets_error/zs/shift_operator_error.zs
package shift_operator_error;

struct ShiftOperatorError
{
    uint32 offset;
offset << 2:
    string field;
};
